--- a/static/index.html
+++ b/static/index.html
@@ -12,9 +12,9 @@
     <style>
       :root{--sidebar-width:min(250px,50vw);} /* variable to cap sidebar width */
       /* page gradient and nicer default font */
-      body{font-family:'Segoe UI',Arial,Helvetica,sans-serif;margin:0;display:flex;height:100vh;overflow:hidden;background:linear-gradient(#1e1e1e,#151515);color:#eee;font-size:16px}
+      body{font-family:'Segoe UI',Arial,Helvetica,sans-serif;margin:0;display:flex;height:100vh;height:100dvh;overflow:hidden;background:linear-gradient(#1e1e1e,#151515);color:#eee;font-size:16px;padding-bottom:env(safe-area-inset-bottom)}
     /* subtle shadow around sidebar */
-    #sidebar{width:var(--sidebar-width);height:100vh;border-right:1px solid #444;overflow-y:auto;padding:10px;background:#2b2b2b;display:flex;flex-direction:column;border-radius:12px;box-shadow:0 0 10px rgba(0,0,0,0.5)}
+    #sidebar{width:var(--sidebar-width);height:100vh;height:100dvh;border-right:1px solid #444;overflow-y:auto;padding:10px;background:#2b2b2b;display:flex;flex-direction:column;border-radius:12px;box-shadow:0 0 10px rgba(0,0,0,0.5)}
     #sidebar.show{transform:translateX(0)}
     #menuButton{display:none;position:fixed;top:10px;left:10px;z-index:11;background:#444;color:#eee;border:1px solid #555;font-size:20px;padding:5px 10px;cursor:pointer;border-radius:10px;transition:left .3s}
     #menuButton.open{left:calc(var(--sidebar-width) + 10px)}
@@ -50,7 +50,7 @@
     .error{background:#552222;color:#ffbbbb;align-self:center}
     #sysBox{margin-top:10px}
     #sysPrompt{width:100%;background:#333;color:#eee;border:1px solid #555;margin-top:4px}
-    #input{display:flex;border-top:1px solid #444;position:sticky;bottom:0;background:#1e1e1e;z-index:1}
+    #input{display:flex;border-top:1px solid #444;position:sticky;bottom:env(safe-area-inset-bottom,0);background:#1e1e1e;z-index:2;padding:5px;padding-bottom:calc(5px + env(safe-area-inset-bottom,0))}
     #input textarea{flex:1;padding:5px;background:#333;color:#eee;border:1px solid #444;border-radius:10px;margin-right:5px;max-width:75%}
     #input button{background:#444;color:#eee;border:1px solid #555;padding:5px 10px;border-radius:8px;transition:background .2s}
     #input button:hover{background:#555}
@@ -76,7 +76,7 @@
 
     @media (max-width: 700px) {
       body{flex-direction:column;font-size:18px}
-      #sidebar{position:fixed;top:0;left:0;height:100vh;width:var(--sidebar-width);border-bottom:none;transform:translateX(calc(-1 * (var(--sidebar-width) + 10px)));transition:transform .3s;z-index:10;border-radius:12px}
+      #sidebar{position:fixed;top:0;left:0;height:100vh;height:100dvh;width:var(--sidebar-width);border-bottom:none;transform:translateX(calc(-1 * (var(--sidebar-width) + 10px)));transition:transform .3s;z-index:10;border-radius:12px}
       #sidebar.show{width:100%}
       #chat{flex:1;margin-left:0;margin-top:50px}
       #menuButton{display:block}
